# data-structures

./: CMakeLists.txt  First.cpp  InsertLast.java  InsertStart.java  Last.cpp  LinkedList.java  Linkedlist.cpp  Node.cpp  UserinputLinklist.java
DoublyLinkedList/: CMakeLists.txt
Searching/: CMakeLists.txt  LinearSearch.cpp
SinglyLinkedList/: Array.cpp  CMakeLists.txt  Delete1.cpp  Delete2.cpp  Delete3.cpp  Last.cpp  Length.cpp  Node.h  Position.cpp  Reverse.cpp  Search.cpp
